# Argos-Chile

./: .env.example  .gitignore  Dockerfile  METHODOLOGY.md  README.md  README_ES.md  docker-compose.yml  pyproject.toml
app/: db.py  explorer.py  fmt.py  i18n.py  main.py  methodology.py  risk.py  styles.py
docs/: METHODOLOGY.md
notebooks/: 01_eda.ipynb  02_risk_analysis.ipynb  03_deep_case_investigation.ipynb  04_visualizaciones.ipynb  reports.py
scripts/: 00_download_bronze.py  01_process_silver.py  02_bulk_ingestion.py  03_create_projection.py  04_run_analytics.py
src/argos/: reports.py
src/argos/analytics/: risk_engine.py
src/argos/etl/: cleaner.py  crawler.py
src/argos/templates/: reporte.md.j2
